--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -114,11 +114,39 @@
 }
 @media (max-width: 431px) {
     .login-form{
-        width: 390px;
+        place-self: center;
+        width: 400px;
+        color: #808080;
+        background-color: var(--st-PR);
+        display: flex;
+        flex-direction: column;
+        gap: 25px;
+        padding: 20px;
     }
     .login-flex{
         flex-direction: column;
         align-items: start;
         gap: 20px;
+    }
+    .logintop{
+        margin-top: 150px;
+        gap: 20px;
+        flex-direction: column-reverse;
+    }
+    .login-flex label{
+        font-size: 24px;
+        color: white;
+    }
+    .login-condition p{
+        font-size: 24px;
+        color: white;
+    }
+    .login-form button{
+        border: 1px solid black;
+        background-color: black;
+        color: white;
+    }
+    .logintop h2{
+        color: white;
     }
 }
